[package]
name = "k_means"
version = "0.1.0"
authors = ["Angel Leon <luianglenlop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.point]
path="../point"

[dependencies.utils]
path="../utils"

[dependencies.algorithms]
path="../algorithms"

[dependencies]
rand = "0.7.0"
# processing = "*"
